--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
 /node_modules/*
 /src/uploads
 /uploads
-src/config/qa.env
-src/config/dev.env
-src/config/prod.env
-src/config/dev.env
-src/config/stage.env
 src/config/local.env
-src/config/fulfill.env
 dist
 /dist
 .nyc_output
 .env
+docker-compose.yml
