--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "body-parser": "^1.19.0",
       "class-transformer": "^0.4.0",
       "class-validator": "^0.13.1",
+      "convert-array-to-csv": "^2.0.0",
       "cookie-parser": "^1.4.5",
       "cors": "^2.8.5",
       "cron": "^1.8.2",
@@ -26,6 +27,7 @@
       "express": "^4.17.1",
       "express-fileupload": "^1.2.1",
       "express-rate-limit": "^5.4.1",
+      "fast-csv": "^4.3.6",
       "helmet": "^4.6.0",
       "i": "^0.3.7",
       "joi": "^17.4.2",
@@ -34,6 +36,7 @@
       "moment": "^2.29.1",
       "moment-timezone": "^0.5.34",
       "morgan": "^1.10.0",
+      "multer": "^1.4.4",
       "mysql": "^2.18.1",
       "mysql2": "^2.3.0",
       "node-zookeeper-client": "^1.1.1",
@@ -69,6 +72,7 @@
       "@types/jsonwebtoken": "^8.5.5",
       "@types/mocha": "^9.0.0",
       "@types/morgan": "^1.9.3",
+      "@types/multer": "^1.4.7",
       "@types/mysql": "^2.15.19",
       "@types/node": "^14.14.33",
       "@types/node-zookeeper-client": "^0.2.8",
